# tfllite-cpp

./: CMakeLists.txt  CornerDetector.cpp  CornerDetector.h  README.md  infer_tflite.py  main.cpp
models/: cornerRefiner.tflite  getCorners.tflite
